--- a/app/src/main/res/layout/activity_payment3.xml
+++ b/app/src/main/res/layout/activity_payment3.xml
@@ -45,34 +45,36 @@
         android:layout_width="300dp"
         android:layout_height="50dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="224dp"
+        android:layout_marginTop="240dp"
         android:layout_marginEnd="8dp"
+        android:autofillHints=""
         android:background="@drawable/inputfield"
         android:ems="10"
         android:inputType="textPersonName"
         android:text="@string/Card_number"
         android:textColorHint="@color/Darkblue"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.505"
+        app:layout_constraintHorizontal_bias="0.494"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:autofillHints="" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
         android:id="@+id/editText2"
         android:layout_width="300dp"
         android:layout_height="50dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="20dp"
         android:layout_marginEnd="8dp"
+        android:background="@drawable/inputfield"
         android:ems="10"
         android:inputType="textPersonName"
         android:text="CVC"
         android:textColorHint="@color/Darkblue"
-        android:background="@drawable/inputfield"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.494"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editText3" />
+
 
     <EditText
         android:id="@+id/editText4"
@@ -92,7 +94,7 @@
         app:layout_constraintHorizontal_bias="0.494"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editText2"
-        app:layout_constraintVertical_bias="0.09" />
+        app:layout_constraintVertical_bias="0.064" />
 
     <EditText
         android:id="@+id/editText3"
@@ -102,17 +104,17 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
+        android:background="@drawable/inputfield"
         android:ems="10"
         android:inputType="textPersonName"
         android:text="Name"
         android:textColorHint="@color/Darkblue"
-        android:background="@drawable/inputfield"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.494"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editText"
-        app:layout_constraintVertical_bias="0.069" />
-
+        app:layout_constraintVertical_bias="0.037" />
 
     <Button
         android:id="@+id/Update"
@@ -194,17 +196,4 @@
         app:layout_constraintTop_toBottomOf="@+id/textView11"
         app:layout_constraintVertical_bias="0.0" />
 
-    <TextView
-        android:id="@+id/textView28"
-        android:layout_width="263dp"
-        android:layout_height="56dp"
-        android:text="You can have to Change , update and Delete any information"
-        android:textColor="#8B1FF8"
-        android:textSize="18sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.49"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView12"
-        app:layout_constraintVertical_bias="0.0" />
 </androidx.constraintlayout.widget.ConstraintLayout>
